# fantasy-cup

./: .env.example  .gitignore  README.md  api_football_cli.py  configs.yaml  daily_truth_pipeline.py  main.py  mock_leaderboard_2022.json  mock_team_claims_2022.json  pyproject.toml  score_team_claims.py  truth_pipeline_README.md
backend/: config.py  main.py
explanation/: README.md  api-football-capability-review.md  app-dev-plan.md  app-system-diagrams.md  game_explanation.md  main-modules-simple.md  system-overview.md
frontend/: app.js  index.html  styles.css
ingestion/: README.md  codex_environment.py  run_pick.py  windows_codex_workarounds.py
inno-fantasy/backend/: .env.example  README.md  main.py  pyproject.toml
inno-fantasy/backend/config/: config.yaml  config_provider.py
inno-fantasy/backend/integrations/: foorball_api.py  genai_runner.py  oci_client_provider.py
inno-fantasy/backend/models/: payload_schemas.py  team_submission.schema.json
inno-fantasy/backend/routes/: progress.py  public_data.py  scores.py  upload.py
inno-fantasy/backend/services/: daily_source_gen.py  daily_truth_gen.py  job_store.py  pipeline.py  rate_limiter.py  score_engine.py
inno-fantasy/backend/services/codex_runner/: skill_runner.py  windows_helpers.py
inno-fantasy/backend/services/data_generator/: public_data.py  source_of_truth.py
inno-fantasy/backend/services/validator/: main_validator.py  skill_guardrail.py  skill_validator.py  zip_handler.py
inno-fantasy/backend/tests/: test_fantasy_xi_flexibility.py
inno-fantasy/backend/workers/: worker.py
(+215 files in other folders)
